<resources>
    <string name="app_name_init">Dental E-Commerce App</string>
    <string name="app_name">DCare</string>
    <string name="image_content_description">image</string>
    <string name="register_underline"><u>Register</u></string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="email_id">Email ID</string>
    <string name="password">password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="back_image">back_image</string>
    <string name="create_an_account">Create an account</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="i_agree_to_the">I Agree To The </string>
    <string name="terms_and_conditions"><u><![CDATA[Terms & Conditions]]></u></string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="login_underline"><u>Login</u></string>
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="err_msg_enter_first_name">Please enter first name</string>
    <string name="err_msg_enter_last_name">Please enter last name</string>
    <string name="err_msg_enter_phone_number">Please enter phone number</string>
    <string name="err_msg_enter_email">Please enter email</string>
    <string name="err_msg_enter_password">Please enter password</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password</string>
    <string name="err_msg_password_and_confirm_password_mismatch">password and confirm password does not match</string>
    <string name="err_msg_agree_terms_and_conditions">Please agree terms and conditions</string>
    <string name="enter_your_e_mail_address_nwe_ll_send_you_a_e_mail_to_reset_your_password">Enter your e-mail address.\nWe\'ll send you a e-mail to reset your password.</string>
    <string name="email_sent_success">Email sent successfully to reset your password!</string>
    <string name="submit">Submit</string>
    <string name="registry_successful">Thanks for registering!</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="image_selection_failed">Image selection failed!</string>
    <string name="err_msg_mobile_number">Enter mobile number</string>
    <string name="err_msg_mobile_number_less_than_11">Mobile number must be 11 digits</string>
    <string name="msg_profile_updated_success">Your profile is updated successfully</string>
    <string name="no_dashboard_item_found">No items found!</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_wishlist">Wishlist</string>
    <string name="title_orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="dental">Dental</string>
    <string name="products">Products</string>
    <string name="logout">Logout</string>
    <string name="addresses">Addresses</string>
    <string name="edit">Edit</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="select_a_category">Select A Category</string>
    <string name="all">All</string>
    <string name="clinic_set_up">Clinic Set-up</string>
    <string name="small_equipments">Small Equipments</string>
    <string name="dental_consumables">Dental Consumables</string>
    <string name="lab_products">Lab Products</string>
    <string name="dental_instruments">Dental Instruments</string>
    <string name="dental_training">Dental Training</string>
    <string name="dental_portable">Dental Portable</string>
    <string name="search_by_name">Search by name</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="lbl_out_of_stock">OUT OF STOCK</string>
    <string name="about_the_product">About the product</string>
    <string name="success_message_item_added_to_cart">Product was added to your cart.</string>
    <string name="go_to_cart">Go To Cart</string>
    <string name="no_cart_item_found">No items found in cart!</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_shipping_charge">Shipping Charge</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="btn_lbl_checkout">Checkout</string>
    <string name="my_cart">My Cart</string>
    <string name="msg_for_available_stock">Available stock is %1$s!. You can not add more than stock quantity.</string>
    <string name="msg_item_removed_successfully">Item removed successfully.</string>
    <string name="address_list">Address List</string>
    <string name="lbl_add_address">Add Address</string>
    <string name="no_address_found">No Address Found!</string>
    <string name="title_select_address">SELECT ADDRESS</string>
    <string name="err_your_address_deleted_successfully">Your address was deleted successfully.</string>
    <string name="hint_address">Address</string>
    <string name="hint_zip_code">ZipCode</string>
    <string name="additional_note">Additional note</string>
    <string name="lbl_home">HOME</string>
    <string name="lbl_office">OFFICE</string>
    <string name="lbl_other">OTHER</string>
    <string name="hint_other_details">Other note</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="title_edit_address">EDIT ADDRESS</string>
    <string name="btn_lbl_update">UPDATE</string>
    <string name="err_msg_please_enter_full_name">Please enter full name.</string>
    <string name="err_msg_please_enter_phone_number">Please enter phone number.</string>
    <string name="err_msg_please_enter_address">Please enter address.</string>
    <string name="err_msg_please_zip_code">Please enter zip-code.</string>
    <string name="err_msg_please_other_details">Please enter other details.</string>
    <string name="msg_your_address_updated_successfully">Your address was updated successfully.</string>
    <string name="your_address_was_added_successfully">Your address was added successfully.</string>
    <string name="title_checkout">CHECKOUT</string>
    <string name="checkout_lbl_product_items">Product Items</string>
    <string name="checkout_lbl_selected_address">Selected Address</string>
    <string name="checkout_lbl_items_receipt">Items Receipt</string>
    <string name="lbl_payment_mode">Payment Mode</string>
    <string name="lbl_cash_on_delivery">Cash On Delivery</string>
    <string name="btn_lbl_place_order">PLACE ORDER</string>
    <string name="no_orders_placed_yet">No orders placed yet!</string>
    <string name="title_my_order_details">MY ORDER DETAILS</string>
    <string name="order_details_lbl">Order Details</string>
    <string name="order_details_lbl_order_id">Order ID</string>
    <string name="order_details_lbl_order_date">Order Date</string>
    <string name="order_status_pending">Pending</string>
    <string name="order_details_lbl_shipping_address">Shipping Address</string>
    <string name="order_status_in_process">In Process</string>
    <string name="order_status_delivered">Delivered</string>
    <string name="no_wishlist_added_yet">No wishlist added yet!</string>


</resources>