<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/montserrat_bold"
        android:includeFontPadding="false"
        android:paddingTop="@dimen/_8sdp"
        android:text="@string/select_a_category"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp" />

    <TextView
        android:id="@+id/tv_allCategories"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/background_input"
        android:clickable="true"
        android:color="@color/black"
        android:elevation="@dimen/_1sdp"
        android:focusable="true"
        android:fontFamily="@font/montserrat_regular"
        android:foreground="@drawable/custom_ripple_background_input_selector"
        android:gravity="center"
        android:importantForAutofill="no"
        android:text="@string/all"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp" />

    <TextView
        android:id="@+id/tv_clinicSetup"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/background_input"
        android:clickable="true"
        android:color="@color/black"
        android:elevation="@dimen/_1sdp"
        android:focusable="true"
        android:fontFamily="@font/montserrat_regular"
        android:foreground="@drawable/custom_ripple_background_input_selector"
        android:gravity="center"
        android:importantForAutofill="no"
        android:text="@string/clinic_set_up"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp" />

    <TextView
        android:id="@+id/tv_smallEquipments"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/background_input"
        android:clickable="true"
        android:color="@color/black"
        android:elevation="@dimen/_1sdp"
        android:focusable="true"
        android:fontFamily="@font/montserrat_regular"
        android:foreground="@drawable/custom_ripple_background_input_selector"
        android:gravity="center"
        android:importantForAutofill="no"
        android:text="@string/small_equipments"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp" />

    <TextView
        android:id="@+id/tv_dentalConsumables"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/background_input"
        android:clickable="true"
        android:color="@color/black"
        android:elevation="@dimen/_1sdp"
        android:focusable="true"
        android:fontFamily="@font/montserrat_regular"
        android:foreground="@drawable/custom_ripple_background_input_selector"
        android:gravity="center"
        android:importantForAutofill="no"
        android:text="@string/dental_consumables"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp" />

    <TextView
        android:id="@+id/tv_labProducts"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/background_input"
        android:clickable="true"
        android:color="@color/black"
        android:elevation="@dimen/_1sdp"
        android:focusable="true"
        android:fontFamily="@font/montserrat_regular"
        android:foreground="@drawable/custom_ripple_background_input_selector"
        android:gravity="center"
        android:importantForAutofill="no"
        android:text="@string/lab_products"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp" />

    <TextView
        android:id="@+id/tv_dentalInstruments"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/background_input"
        android:clickable="true"
        android:color="@color/black"
        android:elevation="@dimen/_1sdp"
        android:focusable="true"
        android:fontFamily="@font/montserrat_regular"
        android:foreground="@drawable/custom_ripple_background_input_selector"
        android:gravity="center"
        android:importantForAutofill="no"
        android:text="@string/dental_instruments"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp" />

    <TextView
        android:id="@+id/tv_dentalTraining"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/background_input"
        android:clickable="true"
        android:color="@color/black"
        android:elevation="@dimen/_1sdp"
        android:focusable="true"
        android:fontFamily="@font/montserrat_regular"
        android:foreground="@drawable/custom_ripple_background_input_selector"
        android:gravity="center"
        android:importantForAutofill="no"
        android:text="@string/dental_training"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp" />

    <TextView
        android:id="@+id/tv_dentalPortable"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/background_input"
        android:clickable="true"
        android:color="@color/black"
        android:elevation="@dimen/_1sdp"
        android:focusable="true"
        android:fontFamily="@font/montserrat_regular"
        android:foreground="@drawable/custom_ripple_background_input_selector"
        android:gravity="center"
        android:importantForAutofill="no"
        android:text="@string/dental_portable"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp" />

</LinearLayout>