<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/background_shape"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_280sdp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:src="@drawable/background_login_bottom_right_shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="@dimen/_28sdp"
        android:layout_height="@dimen/_28sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:background="@drawable/custom_ripple_button_selector"
        android:contentDescription="@string/back_image"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/forgot_password"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background_shape" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:text="@string/enter_your_e_mail_address_nwe_ll_send_you_a_e_mail_to_reset_your_password"
        android:textColor="@color/color_lightGray"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/background_shape" />

    <EditText
        android:id="@+id/ed_emailId"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/background_input"
        android:color="@color/black"
        android:elevation="@dimen/_1sdp"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/email_id"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_13sdp"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/color_lightGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/montserrat_regular"
        android:foreground="@drawable/custom_ripple_button_gray_selector"
        android:gravity="center"
        android:paddingTop="@dimen/_6sdp"
        android:paddingBottom="@dimen/_6sdp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_emailId" />

</androidx.constraintlayout.widget.ConstraintLayout>