<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/background_shape"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_280sdp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:src="@drawable/background_login_bottom_left_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/_25ssp"
        app:layout_constraintBottom_toBottomOf="@id/background_shape"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ed_emailId"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/background_input"
        android:color="@color/black"
        android:elevation="@dimen/_1sdp"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/email_id"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/color_lightGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/background_shape" />

    <EditText
        android:id="@+id/ed_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/background_input"
        android:color="@color/black"
        android:elevation="@dimen/_1sdp"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/color_lightGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_emailId" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_1sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@drawable/custom_ripple_button_selector"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/montserrat_regular"
        android:padding="@dimen/_5sdp"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/montserrat_regular"
        android:foreground="@drawable/custom_ripple_button_gray_selector"
        android:gravity="center"
        android:paddingTop="@dimen/_6sdp"
        android:paddingBottom="@dimen/_6sdp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginBottom="@dimen/_3sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_13sdp"
            android:fontFamily="@font/montserrat_regular"
            android:padding="@dimen/_2sdp"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_13sdp"
            android:background="@drawable/custom_ripple_button_selector"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/montserrat_bold"
            android:padding="@dimen/_2sdp"
            android:text="@string/register_underline"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>