<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.CartListActivity">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="@dimen/_28sdp"
        android:layout_height="@dimen/_28sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:background="@drawable/custom_ripple_button_selector"
        android:clickable="true"
        android:contentDescription="@string/back_image"
        android:focusable="true"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_title"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/my_cart"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cart_items_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_13sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/ll_checkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_no_cart_item_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/no_cart_item_found"
        android:textAlignment="center"
        android:textColor="@color/color_lightGray"
        android:textSize="@dimen/_18ssp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/ll_checkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />


    <LinearLayout
        android:id="@+id/ll_checkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/_13sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lbl_subtotal"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:id="@+id/tv_sub_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lbl_shipping_charge"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:id="@+id/tv_shipping_charge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lbl_total_amount"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:id="@+id/tv_total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_checkout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/montserrat_regular"
            android:foreground="@drawable/custom_ripple_button_gray_selector"
            android:gravity="center"
            android:paddingTop="@dimen/_6sdp"
            android:paddingBottom="@dimen/_6sdp"
            android:text="@string/btn_lbl_checkout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_10sdp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>